# simple-qsar

./: LICENSE  README.md  pyproject.toml  simple_qsar.py
