[tool.poetry]
name = "simple-qsar"
version = "0.1.0"
description = ""
authors = ["mariusrueve <44000950+mariusrueve@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
numpy = "^2.1.1"
rdkit = "^2024.3.5"
scikit-learn = "^1.5.2"
joblib = "^1.4.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
